# agno-dcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_REPORT.md  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
agno_dcp/: __init__.py  _version.py  agent.py  exceptions.py  identity.py  team.py  workflow.py
agno_dcp/audit/: __init__.py  chain.py  exporter.py  verifier.py
agno_dcp/compliance/: __init__.py  eu_ai_act.py  nist_ai_rmf.py
agno_dcp/mcp/: __init__.py  middleware.py
agno_dcp/policy/: __init__.py  engine.py  gate.py  rules.py
agno_dcp/storage/: __init__.py  base.py  postgres.py  schema.sql  sqlite.py
docs/: api_reference.md  architecture.md  benchmarks.md  compliance_mapping.md  quickstart.md  why.md
examples/: README.md
tests/: conftest.py  test_agent.py  test_audit_chain.py  test_identity.py  test_mcp_middleware.py  test_policy_gate.py
tests/integration/: test_end_to_end.py
