[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agno-dcp"
dynamic = ["version"]
description = "Cryptographic governance for Agno agents. Identity, policy gates, and tamper-evident audit trails for production agentic systems."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "DCP-AI Contributors" },
]
maintainers = [
    { name = "Danilo Naranjo", email = "danilo@ocular.solution" },
]
keywords = [
    "agno",
    "dcp",
    "ai-agents",
    "governance",
    "audit",
    "policy",
    "post-quantum",
    "identity",
    "compliance",
    "eu-ai-act",
    "nist-ai-rmf",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "dcp-ai>=2.8.1",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "cryptography>=42.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.8",
    "pre-commit>=3.7",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/dcp-ai-protocol/agno-dcp"
Documentation = "https://github.com/dcp-ai-protocol/agno-dcp#readme"
Issues = "https://github.com/dcp-ai-protocol/agno-dcp/issues"
Source = "https://github.com/dcp-ai-protocol/agno-dcp"
"DCP-AI Protocol" = "https://dcp-ai.org/"

[project.scripts]
agno-dcp = "agno_dcp.audit.verifier:main"

[tool.hatch.version]
path = "agno_dcp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["agno_dcp"]

[tool.hatch.build.targets.sdist]
include = [
    "agno_dcp",
    "tests",
    "docs",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests requiring external services (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["agno_dcp"]
branch = true
omit = [
    "agno_dcp/_version.py",
    "agno_dcp/storage/postgres.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
